--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "cSpell.words": [
+    "BLOUSERING",
+    "Chatuk",
+    "girlinvyshyvanka",
+    "GORGANY",
+    "Rybachok",
+    "Sergey",
+    "Tkachuk",
+    "VERKHOVINA",
+    "Vyshyvanka",
+    "YASEN"
+  ]
 }
